--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,1 +1,24 @@
-    <app-wrapper></app-wrapper>
+    <app-user-registration></app-user-registration>
+    <!-- <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : 257214755332349,
+        cookie     : true,
+        xfbml      : true,
+        version    : 1.1
+      });
+        
+      FB.AppEvents.logPageView();   
+        
+    };
+  
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "https://connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script> -->
+      <div id="fb-root"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/uk_UA/sdk.js#xfbml=1&version=v7.0&appId=257214755332349&autoLogAppEvents=1"></script>
