--- a/front-end/src/app/components/user-registration/user-registration.component.html
+++ b/front-end/src/app/components/user-registration/user-registration.component.html
@@ -9,6 +9,6 @@
   <span>or</span>
     <div class="flx-cntr">
       <button mat-stroked-button color="primary" (click)="registrationFunc()">registration</button>
-      <button mat-raised-button color="primary">sign in</button>
+      <button mat-raised-button color="primary" (click)="loginFunc()">sign in</button>
     </div>
 </section>
