I have added logic for aside component. I have created new array with names of checked checkboxes

--- a/front-end/src/app/components/modal-registration/modal-registration.component.html
+++ b/front-end/src/app/components/modal-registration/modal-registration.component.html
@@ -1,4 +1,5 @@
 <section class="wrapper">
+  <div>{{data.modalStatus==='registrationStatus'?'REGISTRATION:':'SIGN IN:'}}</div>
     <form [formGroup]="registrationForm">
       <div>
         <mat-form-field appearance="fill">
