--- a/front-end/src/app/components/user-registration/user-registration.component.html
+++ b/front-end/src/app/components/user-registration/user-registration.component.html
@@ -8,7 +8,12 @@
   </div>
   <span>or</span>
     <div class="flx-cntr">
-      <button mat-stroked-button color="primary" (click)="registrationFunc()">registration</button>
-      <button mat-raised-button color="primary" (click)="loginFunc()">sign in</button>
+      <button mat-raised-button color="secondary" (click)="registrationFunc()">registration</button>
+      <button mat-raised-button color="secondary" (click)="loginFunc()">sign in</button>
+    </div>
+    <div class="zigzag">
+      <div class="upperBackground"></div>
+      <div class="topCircle"></div>
+      <div class="bottomCircle"></div>
     </div>
 </section>
