--- a/front-end/src/app/components/user-registration/user-registration.component.scss
+++ b/front-end/src/app/components/user-registration/user-registration.component.scss
@@ -7,9 +7,11 @@
 }
 .registration{
     @include mrgn-pdng-size-brdr(20px auto 0, 40px, 60vw, 60vh, 1px solid black);
+    position: relative;
     box-shadow: 1px 1px 2px black;
     text-align: center;
-    background-color: var(--main-theme);
+    background-color: var(--secondary-theme);
+    overflow: hidden;
     span{
         font-weight: 550;
         font-size: 21px;
@@ -41,6 +43,38 @@
         width: 140px;
         margin: 30px 5px;
         text-transform: uppercase;
+        position: relative;
+        z-index: 3;
+    }
+    .zigzag{
+        @include mrgn-pdng-size-brdr(0 , 0, 89.9%, 100px, none);
+        background-color: var(--main-theme);
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        .upperBackground{
+            @include mrgn-pdng-size-brdr(0, 0, 86%, 50px, none);
+            background-color: var(--secondary-theme);
+            position: absolute;
+            bottom: 50px;
+            left: 0;
+        }
+        .topCircle{
+            @include mrgn-pdng-size-brdr(0, 0, 28%, 100px, none);
+            background-color: var(--secondary-theme);
+            border-radius: 50%;
+            position: absolute;
+            bottom: 50px;
+            right: 0;
+        }
+        .bottomCircle{
+            @include mrgn-pdng-size-brdr(0, 0, 28%, 100px, none);
+            background-color: var(--main-theme);
+            border-radius: 50%;
+            position: absolute;
+            bottom: -49px;
+            left: -11%;
+        }
     }
 }
 @media screen and (max-width: 600px) {
