--- a/front-end/src/app/components/modal-registration/modal-registration.component.html
+++ b/front-end/src/app/components/modal-registration/modal-registration.component.html
@@ -25,7 +25,7 @@
     <div class="parentElement" *ngIf="data.modalStatus==='registrationStatus'">
       <mat-form-field appearance="fill" >
         <mat-label>Repeat your password</mat-label>
-        <input matInput type="password" placeholder="exampLe1!" formControlName="userRepeatPassword"
+        <input matInput type="password" placeholder="exampLe1!" formControlName="userConfirmPassword"
         #itemConfirmPasswordVisibility required> 
         <small *ngIf="repeatPasswordErrorMessage().length">{{repeatPasswordErrorMessage()}}</small>
       </mat-form-field>
