I have added passport local strategy

--- a/front-end/src/app/components/modal-text/modal-text.component.scss
+++ b/front-end/src/app/components/modal-text/modal-text.component.scss
@@ -1,6 +1,9 @@
-button{
-    width: 110px;
-    margin: 30px 5px;
-    height: 30px;
-    text-transform: uppercase;
+.container{
+    text-align: center;
+    button{
+        width: 110px;
+        margin: 30px 5px;
+        height: 30px;
+        text-transform: uppercase;
+    }
 }
