--- a/front-end/src/app/components/atm-software/atm-software.component.html
+++ b/front-end/src/app/components/atm-software/atm-software.component.html
@@ -1,4 +1,23 @@
-<mat-drawer-container class="example-container">
-    <mat-drawer mode="side" opened>Drawer content</mat-drawer>
-    <mat-drawer-content>Main content</mat-drawer-content>
-</mat-drawer-container>
+<mat-drawer-container class="container" autosize 
+(mousemove)="$event.clientX<40?drawer.open():''||$event.clientX>200?drawer.close():''">
+  <mat-drawer #drawer class="sidenav" mode="side">
+    <div class="firstButtonWrapper">
+      <button mat-raised-button color="primary" [routerLink]="['cards']">CARDS</button>
+    </div>
+    <div class="secondButtonWrapper">
+      <button mat-raised-button color="primary" [routerLink]="['atm-software']">ATM SOFTWARE</button>
+    </div>
+    <mat-form-field>
+      <mat-label>Language</mat-label>
+      <mat-select [disabled]="disableSelect.value">
+        <mat-option value="English">English</mat-option>
+        <mat-option value="Ukrainian">Ukrainian</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-drawer>
+  <div class="flx-strt">
+    <div class="menuPointer"><p>MENU</p></div>
+    <router-outlet></router-outlet>
+  </div>
+
+  </mat-drawer-container>
