--- a/front-end/src/app/components/user-and-cards/user-and-cards.component.html
+++ b/front-end/src/app/components/user-and-cards/user-and-cards.component.html
@@ -1,1 +1,3 @@
-<p>user-and-cards works!</p>
+<div class="container">
+    <button mat-raised-button color="primary" class="cardButton" (click)="addCard()">ADD NEW CARD</button>
+</div>
