--- a/front-end/src/app/components/user-and-cards/user-and-cards.component.html
+++ b/front-end/src/app/components/user-and-cards/user-and-cards.component.html
@@ -1,3 +1,6 @@
 <div class="container">
     <button mat-raised-button color="primary" class="cardButton" (click)="addCard()">ADD NEW CARD</button>
 </div>
+<div>
+    <app-card-details *ngFor="let item of cardsArr"></app-card-details>
+</div>
