--- a/front-end/src/app/components/atm-software/atm-software.component.html
+++ b/front-end/src/app/components/atm-software/atm-software.component.html
@@ -18,9 +18,10 @@
       </mat-select>
     </mat-form-field>
   </mat-drawer>
+  <mat-drawer-content class="mat-drawer-content">
   <div class="flx-strt">
     <div class="menuPointer"><p>MENU</p></div>
     <router-outlet></router-outlet>
   </div>
-
+</mat-drawer-content>
   </mat-drawer-container>
